--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="header container"></header>
 
+    <main class="main container">
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
+
+    <footer class="footer container"></footer>
 
     <script src="index.js"></script>
 </body>
