header and container

--- a/index.html
+++ b/index.html
@@ -1,16 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header class="header container"></header>
+    <header class="header container">
+        <div class="ra">
+            <div first>
+                <h1 class="rule">ПРАВОВОЙ <br>
+                    СОТВЕТНИК</h1>
+                <p class="lawyer">Юридическое бюро</p>
+            </div>
+
+            <p class="expert">Экспертная помощь <br>
+                в списании долгов <br> физических лиц и ИП
+                <br> по всей России
+            </p>
+
+            <p class="experto">Удмуртская Республика, <br>
+                г. Ижевск, ул. Холмогорова, 11 Б, <br> западный вход, 4 этаж</p>
+
+            <div class="second">
+                <h1 class="rule">8 800 700 64 79</h1>
+                <p class="pi">Пн-Пт: с 9:00 до 18:00</p>
+            </div>
+
+            <div class="third">
+                <img src="svg/copy.svg" alt="">
+                <p class="po">Задайте вопрос <br>
+                    в мессенджере <br>
+                    8 963 028 56 10</p>
+            </div>
+            <div class="sss">
+                <button class="bbb">Получить консультацию</button>
+            </div>
+
+        </div>
+
+        <div class="four">
+            <a class="aa" href="">Банкротство физических лиц</a>
+            <a class="aa" href="">Услуги</a>
+            <a class="aa" href="">О компании</a>
+            <a class="aa" href="">Кейсы</a>
+        </div>
+        <div class="divo"></div>
+    </header>
 
     <main class="main container">
-        <section></section>
+        <section class="section2">
+            <div class="what">
+                <div class="women">
+                    <img class="picture" src="svg/women.svg" alt="">
+                    <h1 class="lidia">ЛИДИЯ ПОЛОЗОВА</h1>
+                    <p class="mean">Главный юрист <br>
+                        Финансовый управляющий</p>
+
+                    <h1 class="our">Спишем ваши долги по кредитам, <br>
+                        займам, налогам и ЖКХ <span class="span">на основании <br> Федерального закона от 26.10.2002
+                            <br>
+                            N 127-ФЗ</span> "О несостоятельности <br>
+                        (банкротстве)"</h1>
+                </div>
+
+                <div class="error">
+                    <img class="ff" src="svg/shadow1.svg" alt="">
+                    <p><strong>Вернем 100% оплаты,</strong> если <br>
+                        не сможем списать долги</p>
+
+                    <img class="ff" src="svg/shadow2.svg" alt="">   
+                    <p><strong>Стоимость услуг фиксирована <br>
+                            и не меняется</strong> в течении всей <br>
+                        процедуры банкротства</p>
+
+                    <img class="ff" src="svg/shadow3.svg" alt="">
+                    <p><strong>Предложим варианты решений <br>
+                            Вашей ситуации,</strong> найдем <br>
+                        оптимальный вариант для Вас</p>
+                </div>
+
+                <div class="area">
+                    <h1 class="count">Рассчитайте стоимость списания долгов под ключ <br>
+                        в вашей ситуации</h1>
+                    <div class="hover">
+                        <button class="ddd">Рассчитать стоимость</button>
+                        <p class="plus">+ получите бесплатный анализ вашей <br>
+                            ситуации по списанию долгов и пошаговый <br>
+                            план действий по списанию долгов</p>
+                    </div>
+                </div>
+
+                <div class="bu">
+                    <img class="ffd" src="svg/key1.svg" alt="">
+                    <p class="ffs">Юристы с опытом  более 10 лет</p>
+
+                    <img class="ffd" src="svg/key2.svg" alt="">
+                    <p class="ffss"> <strong>Полное сопровождение</strong> <br>
+                        и предоставление <strong>персонального <br>
+                            менеджера</strong></p>
+
+                    <img class="ffd" src="svg/key3.svg" alt="">
+                    <p class="ffsss"><strong>Рассрочка до 6 месяцев <br>
+                            на услуги банкротства</strong></p>
+
+                    <img class="ffd" src="svg/key4.svg" alt="">
+                    <p class="ffssss"> <strong>>Конфиденциально</strong> без <br>
+                        оповещения работодателя, <br>
+                        родственников и знакомых</p>
+
+                </div>
+
+
+            </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
@@ -22,7 +128,7 @@
         <section></section>
         <section></section>
         <section></section>
-        
+
         <section></section>
         <section></section>
         <section></section>
@@ -33,4 +139,5 @@
 
     <script src="index.js"></script>
 </body>
+
 </html>
