--- a/index.html
+++ b/index.html
@@ -122,8 +122,84 @@
         <section></section>
         <section></section>
 
-        <section></section>
-        <section></section>
+        <section class="hore">
+            <div class="btns">
+                <h1>Решившись на банкротство, вы не подписываетесь
+                    на новые проблемы, <span class="span">а только избавляетесь от текущих</span></h1>
+                <p class="letter">Что вы получите после начала работы с нами?</p>
+            </div>
+
+            <div class="dairy">
+                <div class="error1">
+                    <img src="./svg/img.svg" alt="">
+                    <h3>Перестанут беспокоить коллекторы, судебные приставы</h3>
+
+                    <p>Вас и ваших родственников
+                        с первого дня Перестанут
+                        навещать коллекторы, звонки
+                        из банка прекратятся и вы
+                        сможете жить без страха
+                        за себя и семью</p>
+                </div>
+                <div class="error2">
+                    <img src="./svg/images.svg" alt="">
+                    <h3>Сможете свободно распоряжаться своими финансами</h3>
+                    <p>Вы больше не будете
+                        отдавать долги, так как будете
+                        объявлены банкротом.
+                        И это законно</p>
+                </div>
+                <div class="error3">
+                    <img src="./svg/dom.svg" alt="">
+                    <h3>Сохраните свое имущество</h3>
+                    <p>Во-первых, у вас точно
+                        останется квартира, зарплата
+                        или пенсия. Во-вторых, мы выработает план, который
+                        позволит сохранить авто, дачу,
+                        участок и т.д,</p>
+                </div>
+                <div class="error4">
+                    <img src="./svg/not.svg" alt="">
+                    <h3 class="charset">Спокойствие и поддержку</h3>
+                    <p>Мы действуем по закону и сопровождаем вас на всех
+                        этапах. С вами все время
+                        на связи персональный менеджер, который оповещает
+                        вас как идут дела </p>
+                </div>
+            </div>
+
+
+        </section>
+
+        <section class="index">
+            <div class="link">
+                <div class="kind">
+                    <h1>Над вашим делом будет работать <br>
+                        профессиональная <span class="komanda">команда юристов <br>
+                            с опытом 10+ лет под руководством <br>
+                            финансового управляющего</span></h1>
+                </div>
+                <div class="vefa">
+                    <img src="./svg/ddd.svg" alt="">
+                    <h1 class="kg">Если вы подали на банкротство раньше банкa,
+                        процедурой занимается <span class="yellow">финансовый управляющий,
+                            который защищает вас от произвола кредиторов</span></h1>
+                    <p>У вас не заберут все имущество — квартира, мебель, техника, личные вещи
+                        останутся с вами. И наоборот: если процесс инициирует ваш кредитор,
+                        он сам выбирает финансового управляющего — зачастую, лояльного к себе —
+                        и получает больше контроля над процедурой</p>
+                    <h3>Работая с нами, вы получаете полное юридическое сопровождение
+                        процедуры банкротства, вплоть до представления интересов в
+                        Верховном суде РФ, при этом стоимость услуги, зафиксированная
+                        в договоре не изменяется.</h3>
+                    <img src="./svg/ottenok.svg" alt="">
+                </div>
+                <div class="content-shok">
+                    <img class="image" src="./svg/tok.svg" alt="">
+                </div>
+
+            </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
